# sipquest

./: .env.example  .gitignore  LICENSE  README.md  build_deck.py  cloudflare.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  wrangler.toml
agents/: __init__.py  gcc_public_funding_agent.py  sipquest_box_agent.py
coral-agents/: README.md  package-lock.json  package.json  tsconfig.json
coral-agents/buyer-agent/src/: sipquestBuyer.ts
coral-agents/config/: seller-personas.toml
coral-agents/seller-agent/src/: service.ts  sipquestService.ts
data/: inventory.json
data/gcc/: applications.json
gcc/: README.md
scripts/: install_pi.sh  register_agentverse_chat.py
sipquest/: __init__.py  box_controller.py  camera_vision.py  intent.py  inventory.py  models.py  reveal.py  state.py
src/sipquest_voice_box/: __init__.py  audio_io.py  config.py  conversation.py  daemon.py  hardware.py  memory.py  memory_consolidation.py  music.py  openai_voice.py  realtime_voice.py  scheduled_tasks.py  weather.py
systemd/: sipquest-box.service
tests/: test_gcc_public_funding_agent.py  test_sipquest_core.py
watch/sipquest-watch/: .gitignore  README.md  platformio.ini
watch/sipquest-watch/scripts/: generate_secrets.py
watch/sipquest-watch/src/: config.h  lilygo_driver_sources.cpp  main.cpp  secrets.example.h  sipquest_face.h
workers/sipquest-agent-endpoint/: README.md
workers/sipquest-agent-endpoint/src/: index.js
